force-app/main/default/objects/Provision__c/Provision__c.object-meta.xml
<CustomObject>
    <label>Provision</label>
    <nameField>
        <displayFormat>Provision-{0000}</displayFormat>
        <label>Provision-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisionen</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>