force-app/main/default/objects/Provision__c/fields/AccountIdEmpfaenger__c.field-meta.xml
<CustomField>
    <fullName>AccountIdEmpfaenger__c</fullName>
    <formula>Makler__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId Empfänger</label>
    <type>Text</type>
</CustomField>