force-app/main/default/objects/Provision__c/fields/Alternative_Gutschrift_Laufnummer__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Gutschrift_Laufnummer__c</fullName>
    <label>Alternative Gutschrift Laufnummer</label>
    <length>16</length>
    <type>Text</type>
</CustomField>