force-app/main/default/objects/Provision__c/fields/Anrede_Formel_Makler__c.field-meta.xml
<CustomField>
    <fullName>Anrede_Formel_Makler__c</fullName>
    <formula>Makler__r.Anrede_Formel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anrede Formel Makler</label>
    <type>Text</type>
</CustomField>