force-app/main/default/objects/Provision__c/fields/AnzahlEinheitenJahr__c.field-meta.xml
<CustomField>
    <fullName>AnzahlEinheitenJahr__c</fullName>
    <label>Anzahl Einheiten Jahr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>