force-app/main/default/objects/Provision__c/fields/AnzahlEinheitenMonat__c.field-meta.xml
<CustomField>
    <fullName>AnzahlEinheitenMonat__c</fullName>
    <label>Anzahl Einheiten Monat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>