force-app/main/default/objects/Provision__c/fields/AnzahlEinheitenQuartal__c.field-meta.xml
<CustomField>
    <fullName>AnzahlEinheitenQuartal__c</fullName>
    <label>Anzahl Einheiten Quartal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>