force-app/main/default/objects/Provision__c/fields/Ausl_ser__c.field-meta.xml
<CustomField>
    <fullName>Ausl_ser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auslöser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provisionen (Auslöser)</relationshipLabel>
    <relationshipName>Provisionen</relationshipName>
    <type>Lookup</type>
</CustomField>