force-app/main/default/objects/Provision__c/fields/Auszahlungsdatum__c.field-meta.xml
<CustomField>
    <fullName>Auszahlungsdatum__c</fullName>
    <label>Auszahlungsdatum</label>
    <type>Date</type>
</CustomField>