force-app/main/default/objects/Provision__c/fields/BeratungsprovisionMitPVInEuro__c.field-meta.xml
<CustomField>
    <fullName>BeratungsprovisionMitPVInEuro__c</fullName>
    <label>Beratungsprovision mit PV in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>