force-app/main/default/objects/Provision__c/fields/Bereit_f_r_Genehmigung__c.field-meta.xml
<CustomField>
    <fullName>Bereit_f_r_Genehmigung__c</fullName>
    <description>Feld für den Prozess/Flow &quot;Provision&quot; im ProcessBuilder, da die aktuelle Formelauswertung einen Fehler auswirft(Bug von Salesforce, Stand 19.05.2015)</description>
    <formula>AND(Alle_Unterlagen_vorhanden__c == true, Eingereicht_Check__c == false, Genehmigung__c == false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bereit für Genehmigung</label>
    <type>Checkbox</type>
</CustomField>