force-app/main/default/objects/Provision__c/fields/BIC_Makler__c.field-meta.xml
<CustomField>
    <fullName>BIC_Makler__c</fullName>
    <formula>Makler__r.Account.BIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BIC Makler</label>
    <type>Text</type>
</CustomField>