force-app/main/default/objects/Provision__c/fields/ClosingBonusInEuro__c.field-meta.xml
<CustomField>
    <fullName>ClosingBonusInEuro__c</fullName>
    <label>Closing Provision in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>