force-app/main/default/objects/Provision__c/fields/ClosingBonusInProzent__c.field-meta.xml
<CustomField>
    <fullName>ClosingBonusInProzent__c</fullName>
    <label>Closing Provision in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>