force-app/main/default/objects/Provision__c/fields/DatumGutschriftStorniert__c.field-meta.xml
<CustomField>
    <fullName>DatumGutschriftStorniert__c</fullName>
    <label>Datum Gutschrift storniert</label>
    <type>Date</type>
</CustomField>