force-app/main/default/objects/Provision__c/fields/Direktverkauf_Provision__c.field-meta.xml
<CustomField>
    <fullName>Direktverkauf_Provision__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Direktverkauf Provision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>