force-app/main/default/objects/Provision__c/fields/Direktverkauf_Provision_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>Direktverkauf_Provision_o_LNK__c</fullName>
    <formula>Direktverkauf_Provision__c / 1.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direktverkauf Provision o. LNK.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>