force-app/main/default/objects/Provision__c/fields/Eingereicht_Check__c.field-meta.xml
<CustomField>
    <fullName>Eingereicht_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eingereicht Check</label>
    <type>Checkbox</type>
</CustomField>