force-app/main/default/objects/Provision__c/fields/Erfolgsabh_ngige_Provision_direkt_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>Erfolgsabh_ngige_Provision_direkt_o_LNK__c</fullName>
    <formula>Erfolgsabh_ngige_Provision_direkt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erfolgsabhängige Provision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>