force-app/main/default/objects/Provision__c/fields/Erfolgsabh_ngige_Provision_indirekt__c.field-meta.xml
<CustomField>
    <fullName>Erfolgsabh_ngige_Provision_indirekt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Erfolgsabhängige Provision indirekt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>