force-app/main/default/objects/Provision__c/fields/Erfolgsabh_ngige_Provision_indirekt_o_L__c.field-meta.xml
<CustomField>
    <fullName>Erfolgsabh_ngige_Provision_indirekt_o_L__c</fullName>
    <formula>Erfolgsabh_ngige_Provision_indirekt__c / 1.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Erfolgsabhängige Provision indirekt o. L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>