force-app/main/default/objects/Provision__c/fields/ErfolgsabhaengigeProvisionInProzent__c.field-meta.xml
<CustomField>
    <fullName>ErfolgsabhaengigeProvisionInProzent__c</fullName>
    <label>Erfolgsabhängige Provision in %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>