force-app/main/default/objects/Provision__c/fields/Festgeschrieben__c.field-meta.xml
<CustomField>
    <fullName>Festgeschrieben__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Festgeschrieben</label>
    <type>Checkbox</type>
</CustomField>