force-app/main/default/objects/Provision__c/fields/Genehmigung__c.field-meta.xml
<CustomField>
    <fullName>Genehmigung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provision intern genehmigt</label>
    <type>Checkbox</type>
</CustomField>