force-app/main/default/objects/Provision__c/fields/Gesetzliche_MwSt_auf_Provisionszahlung__c.field-meta.xml
<CustomField>
    <fullName>Gesetzliche_MwSt_auf_Provisionszahlung__c</fullName>
    <formula>IF(Makler__r.Account.Umsatzsteuerbefreit__c || Makler__r.Account.AnsaessigAusserhalbVonDeutschland__c, 0, 
IF( Verkaufschance__r.Kaufdatum__c &gt;= DATE(2020,7,1) &amp;&amp; Verkaufschance__r.Kaufdatum__c &lt;= DATE(2020,12,31), 0.16, 0.19)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gesetzliche MwSt. auf Provisionszahlung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>