force-app/main/default/objects/Provision__c/fields/Gutschrift_ausgezahlt__c.field-meta.xml
<CustomField>
    <fullName>Gutschrift_ausgezahlt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gutschrift ausgezahlt</label>
    <type>Checkbox</type>
</CustomField>