force-app/main/default/objects/Provision__c/fields/Gutschrift_Laufnummer_Zahl__c.field-meta.xml
<CustomField>
    <fullName>Gutschrift_Laufnummer_Zahl__c</fullName>
    <label>Gutschrift Laufnummer Zahl</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>