force-app/main/default/objects/Provision__c/fields/GutschriftAbgelehnt__c.field-meta.xml
<CustomField>
    <fullName>GutschriftAbgelehnt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gutschrift abgelehnt</label>
    <type>Checkbox</type>
</CustomField>