force-app/main/default/objects/Provision__c/fields/GutschriftBestaetigt__c.field-meta.xml
<CustomField>
    <fullName>GutschriftBestaetigt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gutschrift bestätigt</label>
    <type>Checkbox</type>
</CustomField>