force-app/main/default/objects/Provision__c/fields/GutschriftLaufnummer__c.field-meta.xml
<CustomField>
    <fullName>GutschriftLaufnummer__c</fullName>
    <displayFormat>GS {YYYY} {0000}</displayFormat>
    <label>Gutschrift Laufnummer alt</label>
    <type>AutoNumber</type>
</CustomField>