force-app/main/default/objects/Provision__c/fields/GutschriftLaufnummerNew__c.field-meta.xml
<CustomField>
    <fullName>GutschriftLaufnummerNew__c</fullName>
    <formula>&apos;GS &apos; + TEXT(YEAR(TODAY())) + &apos; &apos; + LPAD(TEXT( Gutschrift_Laufnummer_Zahl__c ), 4 , &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gutschrift Laufnummer</label>
    <type>Text</type>
</CustomField>