force-app/main/default/objects/Provision__c/fields/GutschriftStornoLaufnummer__c.field-meta.xml
<CustomField>
    <fullName>GutschriftStornoLaufnummer__c</fullName>
    <formula>&apos;SB &apos; + TEXT(YEAR(  DatumGutschriftBestaetigt__c  )) + &apos; &apos; + LPAD(TEXT( GutschriftStornoLaufnummerZahl__c ), 4 , &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gutschrift Storno Laufnummer</label>
    <type>Text</type>
</CustomField>