force-app/main/default/objects/Provision__c/fields/GutschriftStornoLaufnummerZahl__c.field-meta.xml
<CustomField>
    <fullName>GutschriftStornoLaufnummerZahl__c</fullName>
    <label>Gutschrift Storno Laufnummer Zahl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>