force-app/main/default/objects/Provision__c/fields/IBAN_Makler__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Makler__c</fullName>
    <formula>Makler__r.Account.IBAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBAN Makler</label>
    <type>Text</type>
</CustomField>