force-app/main/default/objects/Provision__c/fields/JMB_Beteiligung__c.field-meta.xml
<CustomField>
    <fullName>JMB_Beteiligung__c</fullName>
    <defaultValue>0</defaultValue>
    <label>JMB Beteiligung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>