force-app/main/default/objects/Provision__c/fields/JMB_Beteiligung_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>JMB_Beteiligung_o_LNK__c</fullName>
    <formula>JMB_Beteiligung__c / 1.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JMB Beteiligung o. LNK.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>