force-app/main/default/objects/Provision__c/fields/KeineGutschriften__c.field-meta.xml
<CustomField>
    <fullName>KeineGutschriften__c</fullName>
    <formula>Objekt__r.KeineGutschriften__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Keine Gutschriften</label>
    <type>Checkbox</type>
</CustomField>