force-app/main/default/objects/Provision__c/fields/KMProvisionsvoraussetzungenErfuellt__c.field-meta.xml
<CustomField>
    <fullName>KMProvisionsvoraussetzungenErfuellt__c</fullName>
    <formula>Makler__r.Account.KMProvisionsvoraussetzungenErfuellt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KM - Provisionsvoraussetzungen erfüllt</label>
    <type>Checkbox</type>
</CustomField>