force-app/main/default/objects/Provision__c/fields/MaBV_Objekt__c.field-meta.xml
<CustomField>
    <fullName>MaBV_Objekt__c</fullName>
    <formula>Objekt__r.Bezahlung_nach_MaBV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MaBV Objekt</label>
    <type>Checkbox</type>
</CustomField>