force-app/main/default/objects/Provision__c/fields/Makler__c.field-meta.xml
<CustomField>
    <fullName>Makler__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Empfänger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provisionen</relationshipLabel>
    <relationshipName>Provision</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>