force-app/main/default/objects/Provision__c/fields/Makler_VKC__c.field-meta.xml
<CustomField>
    <fullName>Makler_VKC__c</fullName>
    <formula>Verkaufschance__r.Makler__r.FirstName + &apos; &apos; + Verkaufschance__r.Makler__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Makler VKC</label>
    <type>Text</type>
</CustomField>