force-app/main/default/objects/Provision__c/fields/Maklerbetreuer_Text__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer_Text__c</fullName>
    <formula>Makler__r.Account.Maklerbetreuer_Wirtschaftshaus_2__r.FirstName + &apos; &apos; + Makler__r.Account.Maklerbetreuer_Wirtschaftshaus_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerbetreuer Text</label>
    <type>Text</type>
</CustomField>