force-app/main/default/objects/Provision__c/fields/MaklerDarfProvisionSehen__c.field-meta.xml
<CustomField>
    <fullName>MaklerDarfProvisionSehen__c</fullName>
    <formula>$User.Id = MaklerUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User darf Provision sehen</label>
    <type>Checkbox</type>
</CustomField>