force-app/main/default/objects/Provision__c/fields/MaklerprovisionInProzent__c.field-meta.xml
<CustomField>
    <fullName>MaklerprovisionInProzent__c</fullName>
    <formula>Wert_Maklerprovision__c /  Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerprovision in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>