force-app/main/default/objects/Provision__c/fields/MaklerUser__c.field-meta.xml
<CustomField>
    <fullName>MaklerUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Makler User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Provisionen1</relationshipName>
    <type>Lookup</type>
</CustomField>