force-app/main/default/objects/Provision__c/fields/MarketingzuschussInProzent__c.field-meta.xml
<CustomField>
    <fullName>MarketingzuschussInProzent__c</fullName>
    <formula>WertMarketingzuschuss__c /  Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketingzuschuss in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>