force-app/main/default/objects/Provision__c/fields/Notartermin__c.field-meta.xml
<CustomField>
    <fullName>Notartermin__c</fullName>
    <formula>Verkaufschance__r.Notartermin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notartermin</label>
    <type>Date</type>
</CustomField>