force-app/main/default/objects/Provision__c/fields/Objekt__c.field-meta.xml
<CustomField>
    <fullName>Objekt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objekt</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Provisionen</relationshipLabel>
    <relationshipName>Provisionen</relationshipName>
    <type>Lookup</type>
</CustomField>