force-app/main/default/objects/Provision__c/fields/Phase_VKC__c.field-meta.xml
<CustomField>
    <fullName>Phase_VKC__c</fullName>
    <formula>TEXT(Verkaufschance__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase VKC</label>
    <type>Text</type>
</CustomField>