force-app/main/default/objects/Provision__c/fields/Provision_durch_MB_abgelehnt__c.field-meta.xml
<CustomField>
    <fullName>Provision_durch_MB_abgelehnt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provision intern abgelehnt</label>
    <type>Checkbox</type>
</CustomField>