force-app/main/default/objects/Provision__c/fields/Provision_in__c.field-meta.xml
<CustomField>
    <fullName>Provision_in__c</fullName>
    <formula>Provisionssumme__c /  Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provision in % m. LNK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>