force-app/main/default/objects/Provision__c/fields/Provision_in_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>Provision_in_o_LNK__c</fullName>
    <formula>Provision_in__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provision in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>