force-app/main/default/objects/Provision__c/fields/Provision_nach_Kaufpreiszahlung__c.field-meta.xml
<CustomField>
    <fullName>Provision_nach_Kaufpreiszahlung__c</fullName>
    <formula>Objekt__r.Provision_nach_Kaufpreiszahlung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provision nach Kaufpreiszahlung</label>
    <type>Checkbox</type>
</CustomField>