force-app/main/default/objects/Provision__c/fields/ProvisionInProzentOhneMZ__c.field-meta.xml
<CustomField>
    <fullName>ProvisionInProzentOhneMZ__c</fullName>
    <formula>ProvisionssummeOhneMarketingzuschuss__c  / Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provision in % ohne MZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>