force-app/main/default/objects/Provision__c/fields/Provisionsbetrag__c.field-meta.xml
<CustomField>
    <fullName>Provisionsbetrag__c</fullName>
    <label>Provisionsbetrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>