force-app/main/default/objects/Provision__c/fields/Provisionssatz__c.field-meta.xml
<CustomField>
    <fullName>Provisionssatz__c</fullName>
    <label>Provisionssatz</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>