force-app/main/default/objects/Provision__c/fields/Provisionssumme_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>Provisionssumme_o_LNK__c</fullName>
    <formula>Provisionssumme__c / IF( INCLUDES(Makler__r.Gesch_ftsbeziehung__c, &apos;Mitarbeiter WH&apos;), 1.12, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisionssumme (alt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>