force-app/main/default/objects/Provision__c/fields/ProvisionssummeOhneMarketingzuschuss__c.field-meta.xml
<CustomField>
    <fullName>ProvisionssummeOhneMarketingzuschuss__c</fullName>
    <formula>Wert_Verk_ufer_Beratungsprovision_m_R__c + Wert_Tippprovision__c + Wert_Overhead__c + Wert_Maklerprovision__c + IF(!MarketingzuschussNichtAusweisen__c,  WertMarketingzuschuss__c, 0) + AdditionalBrokerCommission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisionssumme ohne Marketingzuschuss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>