force-app/main/default/objects/Provision__c/fields/ProvisionssummeOhneMZInklUSt__c.field-meta.xml
<CustomField>
    <fullName>ProvisionssummeOhneMZInklUSt__c</fullName>
    <formula>ProvisionssummeOhneMarketingzuschuss__c + ProvisionssummeOhneMarketingzuschuss__c * Gesetzliche_MwSt_auf_Provisionszahlung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisionssumme ohne MZ inkl. USt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>