force-app/main/default/objects/Provision__c/fields/ProvisionsverzichtInEuro__c.field-meta.xml
<CustomField>
    <fullName>ProvisionsverzichtInEuro__c</fullName>
    <label>Provisionsverzicht in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>