force-app/main/default/objects/Provision__c/fields/ProvisionsverzichtInProzent__c.field-meta.xml
<CustomField>
    <fullName>ProvisionsverzichtInProzent__c</fullName>
    <label>Provisionsverzicht in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>