force-app/main/default/objects/Provision__c/fields/ProvisionsvoraussetzungenErfuelltAm__c.field-meta.xml
<CustomField>
    <fullName>ProvisionsvoraussetzungenErfuelltAm__c</fullName>
    <label>Provisionsvoraussetzungen erfüllt am</label>
    <type>Date</type>
</CustomField>