force-app/main/default/objects/Provision__c/fields/Provisionszeitraum__c.field-meta.xml
<CustomField>
    <fullName>Provisionszeitraum__c</fullName>
    <label>Provisionszeitraum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monat</fullName>
            </value>
            <value>
                <fullName>Quartal</fullName>
            </value>
            <value>
                <fullName>Jahr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>