force-app/main/default/objects/Provision__c/fields/Rechnungsvorlage_verschickt_am__c.field-meta.xml
<CustomField>
    <fullName>Rechnungsvorlage_verschickt_am__c</fullName>
    <label>Rechnungsvorlage verschickt am</label>
    <type>Date</type>
</CustomField>