force-app/main/default/objects/Provision__c/fields/Rechnungsvorlage_versendet__c.field-meta.xml
<CustomField>
    <fullName>Rechnungsvorlage_versendet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechnungsvorlage versendet</label>
    <type>Checkbox</type>
</CustomField>