force-app/main/default/objects/Provision__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Zahlungsstatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offen</fullName>
                <default>true</default>
                <label>Offen</label>
            </value>
            <value>
                <fullName>Im nächsten Zahlungslauf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>