force-app/main/default/objects/Provision__c/fields/Steuernummer_UStId_Makler__c.field-meta.xml
<CustomField>
    <fullName>Steuernummer_UStId_Makler__c</fullName>
    <formula>Makler__r.Account.Steuernummer__c + IF(!IsBlank(Makler__r.Account.Steuernummer__c) &amp;&amp; !IsBlank(Makler__r.Account.UStd_Id__c), &apos;, &apos;, &apos;&apos;) + Makler__r.Account.UStd_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Steuernummer / UStId Makler</label>
    <type>Text</type>
</CustomField>