force-app/main/default/objects/Provision__c/fields/TA_Beteiligung_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>TA_Beteiligung_o_LNK__c</fullName>
    <formula>TA_Beteiligung__c / 1.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TA Beteiligung o. LNK.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>