force-app/main/default/objects/Provision__c/fields/TippgeberprovisionInProzent__c.field-meta.xml
<CustomField>
    <fullName>TippgeberprovisionInProzent__c</fullName>
    <formula>Wert_Tippprovision__c /  Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tippgeberprovision in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>