force-app/main/default/objects/Provision__c/fields/UStProvisionssumme__c.field-meta.xml
<CustomField>
    <fullName>UStProvisionssumme__c</fullName>
    <formula>Provisionssumme__c * Gesetzliche_MwSt_auf_Provisionszahlung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USt. Provisionssumme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>