force-app/main/default/objects/Provision__c/fields/UStProvisionssummeOhneMZ__c.field-meta.xml
<CustomField>
    <fullName>UStProvisionssummeOhneMZ__c</fullName>
    <formula>ProvisionssummeOhneMarketingzuschuss__c * Gesetzliche_MwSt_auf_Provisionszahlung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USt. Provisionssumme ohne MZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>