force-app/main/default/objects/Provision__c/fields/Verk_ufer_Beratungsprovision_o_R_o_LN__c.field-meta.xml
<CustomField>
    <fullName>Verk_ufer_Beratungsprovision_o_R_o_LN__c</fullName>
    <formula>Wert_Verk_ufer_Beratungsprovision_o_R__c / IF( INCLUDES(Makler__r.Gesch_ftsbeziehung__c, &apos;Mitarbeiter WH&apos;), 1.12, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beratungsprovision (alt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>